--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "name": "visits-counter",
     "scripts": {
-        "postinstall": "cd astro && npm install && npm run build --f",
+        "postinstall": "cd react-app && npm install && npm run build --f",
         "server": "node index.js"
     },
     "dependencies": {
-        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.1",
         "mongoose": "^6.4.6"
