--- a/react-app/public/manifest.json
+++ b/react-app/public/manifest.json
@@ -4,18 +4,18 @@
   "description": "",
   "icons": [
     {
-      "src": "https://assets.chhatreshkhatri.com/icons/icon.svg",
+      "src": "https://cdn.chhatreshkhatri.com/icons/icon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "maskable"
     },
     {
-      "src": "https://assets.chhatreshkhatri.com/icons/icon-192x192.png",
+      "src": "https://cdn.chhatreshkhatri.com/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://assets.chhatreshkhatri.com/icons/icon-512x512.png",
+      "src": "https://cdn.chhatreshkhatri.com/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
